package top.liumuge.adapter.objectadapter;

/**
 * @program: DesignPatterns
 * @auther: MuGe
 * @date: 2020/7/13
 * @time: 18:55
 * @description:
 */
public class Voltage220V {

	public int output220V() {
		int src = 220;
		System.out.println("电压=" + src);
		return src;
	}

}
